src/antlr_files/C_GrammarParser.py
# Generated from ../../grammars/C_Grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class C_GrammarParser ( Parser ):

    grammarFileName = "C_Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'char'", "'int'", "'float'", "'const'", 
                     "'typedef'", "';'", "','", "'printf'", "'\"'", "'*='", 
                     "'/='", "'%='", "'+='", "'-='", "'>>='", "'<<='", "'&='", 
                     "'^='", "'|='", "'('", "')'", "'{'", "'}'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'.'", 
                     "'->'", "'='", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'!='", "'&&'", "'||'", "'!'", "'&'", "'|'", "'~'", 
                     "'^'", "'<<'", "'>>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "PLUS", "MINUS", 
                      "ARISK", "DIV", "MOD", "DPLUS", "DMINUS", "DOT", "ARROW", 
                      "EQ", "GT", "LT", "GTEQ", "LTEQ", "ISEQ", "ISNEQ", 
                      "AND", "OR", "NOT", "AMP", "BITOR", "BITNOT", "BITXOR", 
                      "SL", "SR", "ID", "INT", "FLOAT", "CHAR", "WS", "BLOCKCMT", 
                      "LINECMT", "PRINTF_FORMATTING" ]

    RULE_program = 0
    RULE_functionDef = 1
    RULE_typeSpec = 2
    RULE_typeQual = 3
    RULE_storageClassSpec = 4
    RULE_declarationSpec = 5
    RULE_declaration = 6
    RULE_declarator = 7
    RULE_typedefName = 8
    RULE_pointer = 9
    RULE_initializer = 10
    RULE_parameterList = 11
    RULE_parameterDeclaration = 12
    RULE_stmt = 13
    RULE_printfStmt = 14
    RULE_printfFormat = 15
    RULE_compoundStmt = 16
    RULE_blockItem = 17
    RULE_exprStmt = 18
    RULE_expr = 19
    RULE_assignmentExpr = 20
    RULE_assignmentOp = 21
    RULE_constantExpr = 22
    RULE_conditionalExpr = 23
    RULE_logicalOrExpr = 24
    RULE_logicalAndExpr = 25
    RULE_bitwiseOrExpr = 26
    RULE_logicalXorExpr = 27
    RULE_bitwiseAndExpr = 28
    RULE_equalityExpr = 29
    RULE_relationalExpr = 30
    RULE_shiftExpr = 31
    RULE_addExpr = 32
    RULE_multExpr = 33
    RULE_castExpr = 34
    RULE_unaryExpr = 35
    RULE_postfixExpr = 36
    RULE_postfixOp = 37
    RULE_primaryExpr = 38
    RULE_parenExpr = 39
    RULE_unaryOp = 40
    RULE_identifier = 41
    RULE_literal = 42
    RULE_intLiteral = 43
    RULE_charLiteral = 44
    RULE_floatLiteral = 45

    ruleNames =  [ "program", "functionDef", "typeSpec", "typeQual", "storageClassSpec", 
                   "declarationSpec", "declaration", "declarator", "typedefName", 
                   "pointer", "initializer", "parameterList", "parameterDeclaration", 
                   "stmt", "printfStmt", "printfFormat", "compoundStmt", 
                   "blockItem", "exprStmt", "expr", "assignmentExpr", "assignmentOp", 
                   "constantExpr", "conditionalExpr", "logicalOrExpr", "logicalAndExpr", 
                   "bitwiseOrExpr", "logicalXorExpr", "bitwiseAndExpr", 
                   "equalityExpr", "relationalExpr", "shiftExpr", "addExpr", 
                   "multExpr", "castExpr", "unaryExpr", "postfixExpr", "postfixOp", 
                   "primaryExpr", "parenExpr", "unaryOp", "identifier", 
                   "literal", "intLiteral", "charLiteral", "floatLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    LPAREN=20
    RPAREN=21
    LBRACE=22
    RBRACE=23
    PLUS=24
    MINUS=25
    ARISK=26
    DIV=27
    MOD=28
    DPLUS=29
    DMINUS=30
    DOT=31
    ARROW=32
    EQ=33
    GT=34
    LT=35
    GTEQ=36
    LTEQ=37
    ISEQ=38
    ISNEQ=39
    AND=40
    OR=41
    NOT=42
    AMP=43
    BITOR=44
    BITNOT=45
    BITXOR=46
    SL=47
    SR=48
    ID=49
    INT=50
    FLOAT=51
    CHAR=52
    WS=53
    BLOCKCMT=54
    LINECMT=55
    PRINTF_FORMATTING=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(C_GrammarParser.EOF, 0)

        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.FunctionDefContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.DeclarationContext,i)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = C_GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953421374) != 0):
                self.state = 94
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 92
                    self.functionDef()
                    pass

                elif la_ == 2:
                    self.state = 93
                    self.declaration()
                    pass


                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(C_GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpec(self):
            return self.getTypedRuleContext(C_GrammarParser.DeclarationSpecContext,0)


        def identifier(self):
            return self.getTypedRuleContext(C_GrammarParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(C_GrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(C_GrammarParser.RPAREN, 0)

        def compoundStmt(self):
            return self.getTypedRuleContext(C_GrammarParser.CompoundStmtContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(C_GrammarParser.ParameterListContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = C_GrammarParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.declarationSpec()
            self.state = 102
            self.identifier()
            self.state = 103
            self.match(C_GrammarParser.LPAREN)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953421374) != 0):
                self.state = 104
                self.parameterList(0)


            self.state = 107
            self.match(C_GrammarParser.RPAREN)
            self.state = 108
            self.compoundStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedefName(self):
            return self.getTypedRuleContext(C_GrammarParser.TypedefNameContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_typeSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpec" ):
                listener.enterTypeSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpec" ):
                listener.exitTypeSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpec" ):
                return visitor.visitTypeSpec(self)
            else:
                return visitor.visitChildren(self)




    def typeSpec(self):

        localctx = C_GrammarParser.TypeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeSpec)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(C_GrammarParser.T__0)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(C_GrammarParser.T__1)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(C_GrammarParser.T__2)
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.typedefName()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeQualContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return C_GrammarParser.RULE_typeQual

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeQual" ):
                listener.enterTypeQual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeQual" ):
                listener.exitTypeQual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeQual" ):
                return visitor.visitTypeQual(self)
            else:
                return visitor.visitChildren(self)




    def typeQual(self):

        localctx = C_GrammarParser.TypeQualContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeQual)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(C_GrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StorageClassSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return C_GrammarParser.RULE_storageClassSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStorageClassSpec" ):
                listener.enterStorageClassSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStorageClassSpec" ):
                listener.exitStorageClassSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStorageClassSpec" ):
                return visitor.visitStorageClassSpec(self)
            else:
                return visitor.visitChildren(self)




    def storageClassSpec(self):

        localctx = C_GrammarParser.StorageClassSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_storageClassSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(C_GrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpec(self):
            return self.getTypedRuleContext(C_GrammarParser.TypeSpecContext,0)


        def storageClassSpec(self):
            return self.getTypedRuleContext(C_GrammarParser.StorageClassSpecContext,0)


        def typeQual(self):
            return self.getTypedRuleContext(C_GrammarParser.TypeQualContext,0)


        def pointer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.PointerContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.PointerContext,i)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_declarationSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationSpec" ):
                listener.enterDeclarationSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationSpec" ):
                listener.exitDeclarationSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationSpec" ):
                return visitor.visitDeclarationSpec(self)
            else:
                return visitor.visitChildren(self)




    def declarationSpec(self):

        localctx = C_GrammarParser.DeclarationSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declarationSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 120
                self.storageClassSpec()


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 123
                self.typeQual()


            self.state = 126
            self.typeSpec()
            self.state = 130
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 127
                    self.pointer() 
                self.state = 132
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpec(self):
            return self.getTypedRuleContext(C_GrammarParser.DeclarationSpecContext,0)


        def declarator(self):
            return self.getTypedRuleContext(C_GrammarParser.DeclaratorContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = C_GrammarParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.declarationSpec()
            self.state = 134
            self.declarator()
            self.state = 135
            self.match(C_GrammarParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(C_GrammarParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(C_GrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(C_GrammarParser.RPAREN, 0)

        def parameterList(self):
            return self.getTypedRuleContext(C_GrammarParser.ParameterListContext,0)


        def EQ(self):
            return self.getToken(C_GrammarParser.EQ, 0)

        def assignmentExpr(self):
            return self.getTypedRuleContext(C_GrammarParser.AssignmentExprContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_declarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarator" ):
                listener.enterDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarator" ):
                listener.exitDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarator" ):
                return visitor.visitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def declarator(self):

        localctx = C_GrammarParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declarator)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.identifier()
                self.state = 138
                self.match(C_GrammarParser.LPAREN)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953421374) != 0):
                    self.state = 139
                    self.parameterList(0)


                self.state = 142
                self.match(C_GrammarParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.identifier()
                self.state = 146
                self.match(C_GrammarParser.EQ)
                self.state = 147
                self.assignmentExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(C_GrammarParser.IdentifierContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_typedefName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedefName" ):
                listener.enterTypedefName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedefName" ):
                listener.exitTypedefName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedefName" ):
                return visitor.visitTypedefName(self)
            else:
                return visitor.visitChildren(self)




    def typedefName(self):

        localctx = C_GrammarParser.TypedefNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typedefName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARISK(self):
            return self.getToken(C_GrammarParser.ARISK, 0)

        def typeQual(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.TypeQualContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.TypeQualContext,i)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_pointer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointer" ):
                listener.enterPointer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointer" ):
                listener.exitPointer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer" ):
                return visitor.visitPointer(self)
            else:
                return visitor.visitChildren(self)




    def pointer(self):

        localctx = C_GrammarParser.PointerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pointer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(C_GrammarParser.ARISK)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 154
                    self.typeQual() 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpr(self):
            return self.getTypedRuleContext(C_GrammarParser.AssignmentExprContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_initializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitializer" ):
                listener.enterInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitializer" ):
                listener.exitInitializer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializer" ):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = C_GrammarParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.assignmentExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterDeclaration(self):
            return self.getTypedRuleContext(C_GrammarParser.ParameterDeclarationContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(C_GrammarParser.ParameterListContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)



    def parameterList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = C_GrammarParser.ParameterListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_parameterList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.parameterDeclaration()
            self._ctx.stop = self._input.LT(-1)
            self.state = 170
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = C_GrammarParser.ParameterListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_parameterList)
                    self.state = 165
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 166
                    self.match(C_GrammarParser.T__6)
                    self.state = 167
                    self.parameterDeclaration() 
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ParameterDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationSpec(self):
            return self.getTypedRuleContext(C_GrammarParser.DeclarationSpecContext,0)


        def declarator(self):
            return self.getTypedRuleContext(C_GrammarParser.DeclaratorContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_parameterDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDeclaration" ):
                listener.enterParameterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDeclaration" ):
                listener.exitParameterDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclaration" ):
                return visitor.visitParameterDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclaration(self):

        localctx = C_GrammarParser.ParameterDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameterDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.declarationSpec()
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 174
                self.declarator()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
